Enhance codebase with structured architecture, responsiveness, and better UX:
- Added smooth scrolling for better navigation experience.
- Implemented dynamic routing for product and category pages.
- Improved `CategoriesList` with mobile-specific layout support.
- Introduced detailed documentation across components for clarity.
- Updated README with project features, setup instructions, and structure.
- Enhanced CSS with transitions for mobile menus.
- Optimized metadata for SEO and social sharing (Open Graph/Twitter).
- Updated app and package metadata (`name`, `description`, etc.).
- Refactored cart context for persistence and functionality.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "e-commerce",
+  "name": "audiophile-ecommerce",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "description": "Premium e-commerce platform for high-quality audio equipment",
+  "author": "Julian",
+  "keywords": ["react", "ecommerce", "audio", "headphones", "speakers", "vite", "tailwind"],
   "scripts": {
     "dev": "vite",
     "build": "vite build",
